--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="1:26:59">
+    <meta name="twitter:description" content>
+    <meta name="twitter:image" content="https://ibb.co/HfGby0ST">
     <title>资源</title>
     <style>
         * {
@@ -115,8 +118,8 @@
         <!-- 图片区域（可替换为真实图片） -->
         <div class="image-box">
             <!-- 替换为你的图片链接即可显示真实图片 -->
-            <img src="images/1.jpg" alt="展示图片">
-            <span class="image-placeholder-text">图片展示区</span>
+            <img src="https://ibb.co/HfGby0ST" alt="展示图片">
+            <span class="image-placeholder-text"></span>
         </div>
         
         <!-- 功能按钮 -->
